# upwork-job-research

./: .env.backup  .env.example  .gitignore  README.md  main.py  pyproject.toml  run_scraper.py
config/: keywords.json  settings.json
docs/: apify-actor-comparison.md
src/: __init__.py
src/core/: __init__.py  config.py
src/models/: job_models.py
src/repositories/: job_database_schema.py  job_filter_builder.py  job_insert_mapper.py  job_repository.py  job_row_mapper.py
src/scrapers/: __init__.py  apify_upwork_scraper.py
src/services/: __init__.py  csv_export_service.py  job_normalization_service.py  scan_orchestration_service.py  scan_status_service.py
src/web/: application.py  dashboard_routes.py
src/web/static/: dashboard.js  detail.css  feedback.css  layout.css  scan-overlay.css  styles.css  table.css
src/web/templates/: dashboard.html
src/web/templates/partials/: filter-panel.html  job-detail.html  jobs-table.html
tests/: test_apify_scraper.py  test_configuration.py  test_main_entrypoint.py  test_normalization.py  test_repository_and_export.py  test_scan_logging.py  test_scan_orchestration.py  test_web_app.py
