[project]
name = "upwork-job-research"
version = "0.1.0"
description = "Local Upwork market research dashboard with Apify scraping, SQLite storage, deduplication, filtering, and CSV export."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=3.0.3",
    "fastapi>=0.115.14",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
